--- a/assets/css/just-the-docs-custom.scss
+++ b/assets/css/just-the-docs-custom.scss
@@ -14,3 +14,9 @@ $header-height: 22px;
   padding-top: 0.6rem !important;
   padding-bottom: 0.6rem !important;
 }
+
+
+$font-size-base: 19px;
+h1 { font-size: 2.2rem; }
+h2 { font-size: 1.6rem; }
+
