--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,3 +15,21 @@ h4 { font-size: 1.15rem; }
 
 .page__title { font-size: 2.6rem; }
 .page__lead { font-size: 1.2rem; }
+
+/* Reduce heading sizes */
+h1, .page__title {
+  font-size: 2.2rem !important;
+}
+
+h2 {
+  font-size: 1.4rem !important;
+}
+
+h3 {
+  font-size: 1.15rem !important;
+}
+
+h4 {
+  font-size: 1rem !important;
+}
+
