--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,7 +22,7 @@ h1, .page__title {
 }
 
 h2 {
-  font-size: 1.1rem !important;
+  font-size: 1.2rem !important;
 }
 
 h3 {
@@ -35,7 +35,7 @@ h4 {
 
 /* Global page background */
 body {
-  background-color: #e8ebf0 !important; /* soft gray */
+  background-color: #f0f2f5 !important; /* soft gray */
 }
 
 /* Main content container */
