--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,7 +40,7 @@ body {
 
 /* Main content container */
 .page {
-  background-color: #f7f8fa !important;
+  background-color: #f0f2f5 !important;
 }
 
 /* Article content card */
