--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -50,3 +50,13 @@ body {
   border-radius: 10px;
   box-shadow: 0 4px 18px rgba(0,0,0,0.05);
 }
+
+
+
+/* Color all section titles globally */
+.page__content h2,
+.page__content h3 {
+  color: darktomato;
+}
+
+
