--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -10,3 +10,10 @@ h3 { font-size: 1.35rem; }
 .page__title { font-size: 2.6rem; }
 .page__lead { font-size: 1.2rem; }
 </style>
+
+/* Color all section titles globally */
+.page__content h2,
+.page__content h3 {
+  color: darktomato;
+}
+
